--- a/BlazorApp/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/BlazorApp/Components/Pages/Home.razor
@@ -2,7 +2,7 @@
 @using Microsoft.EntityFrameworkCore
 @using MudBlazor
 <PageTitle>Home</PageTitle>
-
+<ModalUsers></ModalUsers>
 <h1>Hello, world!</h1>
 
 @code{
