--- a/BlazorApp/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/BlazorApp/Components/Pages/Home.razor
@@ -1,11 +1,7 @@
 ﻿@page "/"
 @using Microsoft.EntityFrameworkCore
 @using MudBlazor
+@rendermode InteractiveServer
+@inject ApplicationDbContext DbContext;
 <PageTitle>Home</PageTitle>
-<ModalUsers></ModalUsers>
 <h1>Hello, world!</h1>
-
-@code{
-    
-
-}
