--- a/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
@@ -1,40 +1,18 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@rendermode InteractiveServer
+<RadzenComponents @rendermode="InteractiveServer" />
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">BlazorApp</a>
     </div>
 </div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="users">
-                <span class="bi bi-people-fill" aria-hidden="true" style="height: fit-content;"></span> Users
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="userswithmb">
-                <span class="bi bi-people-fill" aria-hidden="true" style="height: fit-content;"></span> Users With MudBlazor
-            </NavLink>
-        </div>
-    </nav>
-</div>
+<RadzenPanelMenu Style="width:100%" Multiple="true">
+    <RadzenPanelMenuItem Text="Home" Path="/" Icon="home"></RadzenPanelMenuItem>
+    <RadzenPanelMenuItem Text="Counter" Path="counter" Icon="note_add"></RadzenPanelMenuItem>
+    <RadzenPanelMenuItem Text="Weather" Path="weather" Icon="assessment"></RadzenPanelMenuItem>
+    <RadzenPanelMenuItem Text="Users" Icon="people">
+        <RadzenPanelMenuItem Text="All Users" Path="users" />
+        <RadzenPanelMenuItem Text="Users With MudBlazor" Path="userswithmb" />
+    </RadzenPanelMenuItem>
+</RadzenPanelMenu>
