--- a/BlazorApp/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/BlazorApp/wwwroot/app.css
@@ -1,7 +1,13 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-
+body{
+    background-color: #2c2f38 !important;
+    color: #ffffff; 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+p,span,em{
+    color: #ffffff !important;
 a, .btn-link {
     color: #006bb7;
 }
@@ -46,6 +52,7 @@ h1:focus {
         content: "An error has occurred."
     }
 
-.darker-border-checkbox.form-check-input {
-    border-color: #929292;
+    .darker-border-checkbox.form-check-input {
+        border-color: #929292;
+    }
 }
