tasks logic + page TODO make a popup for tasks

--- a/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
@@ -11,6 +11,7 @@
     <RadzenPanelMenuItem Text="Home" Path="/" Icon="home"></RadzenPanelMenuItem>
     <RadzenPanelMenuItem Text="Counter" Path="counter" Icon="note_add"></RadzenPanelMenuItem>
     <RadzenPanelMenuItem Text="Weather" Path="weather" Icon="assessment"></RadzenPanelMenuItem>
+    <RadzenPanelMenuItem Text="Tasks" Path="tasks" Icon="assessment"></RadzenPanelMenuItem>
     <RadzenPanelMenuItem Text="Users" Icon="people">
         <RadzenPanelMenuItem Text="All Users" Path="users" />
         <RadzenPanelMenuItem Text="Users With MudBlazor" Path="userswithmb" />
