Tasks logic + page : done

--- a/BlazorApp/BlazorApp/Components/App.razor
+++ b/BlazorApp/BlazorApp/Components/App.razor
@@ -21,6 +21,8 @@
 </head>
 
 <body>
+<RadzenDialog />
+
 <Routes/>
 <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 <script src="_content/MudBlazor/MudBlazor.min.js"></script>
