Authentication logic: Login has been improved, access rules need to be improved

--- a/BlazorApp/BlazorApp/Components/Pages/ModalUsers.razor
+++ b/BlazorApp/BlazorApp/Components/Pages/ModalUsers.razor
@@ -26,6 +26,16 @@
                         <input type="email" class="form-control" id="email" placeholder="Smith" @bind="_email">
                     </div>
                 </div>
+                <div class="input-group">
+                    <div class="form-group col-lg-12">
+                        <label for="role">Role</label>
+                        <Select @bind-SelectedValue="selectedRole">
+                            <SelectItem Value="0">User</SelectItem>
+                            <SelectItem Value="1">Moder</SelectItem>
+                            <SelectItem Value="2">Admin</SelectItem>
+                        </Select>
+                    </div>
+                </div>
             </div>
         </ModalBody>
         <ModalFooter>
@@ -41,7 +51,8 @@
     private string firstName;
     private string lastName;
     private string _email;
-
+    private int selectedRole;
+    
     private Task ShowModal()
     {
         modalRef.Style = "display: block;";
@@ -58,7 +69,7 @@
     {
         if (!string.IsNullOrWhiteSpace(firstName) && !string.IsNullOrWhiteSpace(lastName) && !string.IsNullOrWhiteSpace(_email))
         {
-            var user = new User { first_name = firstName, last_name = lastName, email = _email };
+            var user = new User { first_name = firstName, last_name = lastName, email = _email, role = selectedRole };
             Console.WriteLine(user);
             DbContext.Users.Add(user);
             await DbContext.SaveChangesAsync();
@@ -69,4 +80,5 @@
             Console.WriteLine("User is empty or whitespace.");
         }
     }
+   
 }
