Roles, Authentication, program.cs migrated DB + insert admin user default

--- a/BlazorApp/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/BlazorApp/Components/Layout/MainLayout.razor
@@ -1,6 +1,5 @@
 ﻿@inherits LayoutComponentBase
 <RadzenComponents @rendermode="InteractiveAuto" />
-
     <div class="page">
         <div class="sidebar">
             <NavMenu />
@@ -8,18 +7,31 @@
 
         <main>
             <div class="rz-text-align-right">
-                <RadzenProfileMenu>
-                    <Template>
-                        <RadzenGravatar Email="user@example.com">
-                        </RadzenGravatar>
-                    </Template>
-                    <ChildContent>
-                        <RadzenProfileMenuItem Text="Users list" Path="users" Icon="account_circle"></RadzenProfileMenuItem>
-                        <RadzenProfileMenuItem Text="Users List with MudBlazor" Path="userswithmb" Icon="line_weight"></RadzenProfileMenuItem>
-                        <RadzenProfileMenuItem Text="Counter" Path="counter" Icon="attach_file"></RadzenProfileMenuItem>
-                        <RadzenProfileMenuItem Text="Weather" Path="weather" Icon="perm_media"></RadzenProfileMenuItem>
-                    </ChildContent>
-                </RadzenProfileMenu>
+                <AuthorizeView>
+                    <NotAuthorized>
+                        <div class="text-right mt-2">
+                            <span class="text-center fw-bolder"><a href="/login">Login</a></span>
+                        </div>
+                        
+                        <hr>
+                    </NotAuthorized>
+                    <Authorized>
+                        <RadzenProfileMenu>
+                            <Template>
+                                <RadzenGravatar Email="user@example.com">
+                                </RadzenGravatar>
+                            </Template>
+                            <ChildContent>
+                                <RadzenProfileMenuItem Text="Users list" Path="users" Icon="account_circle"></RadzenProfileMenuItem>
+                                <RadzenProfileMenuItem Text="Users List with MudBlazor" Path="userswithmb" Icon="line_weight"></RadzenProfileMenuItem>
+                                <RadzenProfileMenuItem Text="Counter" Path="counter" Icon="attach_file"></RadzenProfileMenuItem>
+                                <RadzenProfileMenuItem Text="Weather" Path="weather" Icon="perm_media"></RadzenProfileMenuItem>
+                                <hr>
+                                <RadzenProfileMenuItem Text="Logout" Path="logout" Icon="perm_media"></RadzenProfileMenuItem>
+                            </ChildContent>
+                        </RadzenProfileMenu>
+                    </Authorized>
+                </AuthorizeView>
             </div>
 
             <article class="content px-4">
