--- a/BlazorApp/BlazorApp/Components/Pages/UsersWithMB.razor
+++ b/BlazorApp/BlazorApp/Components/Pages/UsersWithMB.razor
@@ -2,8 +2,10 @@
 @inject Radzen.DialogService DialogService
 @rendermode InteractiveServer
 @inject ApplicationDbContext DbContext;
+@using Microsoft.AspNetCore.Authorization
 @using Blazorise;
 
+@attribute [Authorize(Roles = "administrator")]
 @* Required *@
 <MudThemeProvider />
 <MudPopoverProvider />
