--- a/BlazorApp/BlazorApp/Components/Pages/Account/AccessDenied..razor
+++ b/BlazorApp/BlazorApp/Components/Pages/Account/AccessDenied..razor
@@ -1,5 +1,20 @@
-﻿<h3>AccessDenied_</h3>
-https://youtu.be/GKvEuA80FAE?t=374 TODO
+﻿@page "/access-denied"
+
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body flex-column">
+                <div class="text-center">
+                    <img src="" style="max-height: 5rem">
+                </div>
+                <div class="text-center mt-2">
+                    <span class="text-danger fw-bolder">You dont have permission to access this page</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 @code {
     
 }
